# HW1-FAST-AQ-Parser

./: example.py  pyproject.toml
.github/workflows/: test.yml
data/: make_seq.py
seqparser/: seq.py
tests/: make_seq.py  test_parsers.py  test_transcribe.py
